<resources>
    <string name="app_name">my|ONEworld lockscreen</string>
    <string name="email_address">Email Address</string>
    <string name="password">Password</string>
    <string name="sign_up_link_login_page">Or Sign up. <u>Click Here.</u></string>
    <string name="facebook_app_id">2020717174654511</string>
    <string name="fb_login_protocol_scheme">fb2020717174654511</string>
    <string name="server_client_id">881704997121-67phn1rapqgr07o70hicg0akff52aa4b.apps.googleusercontent.com</string>
    <string name="setting">Settings</string>
    <string name="setting_all_caps">SETTINGS</string>
    <string name="show_hide_data_usage">HIDE / SHOW DATA USAGE</string>
    <string name="story_download_setting">my|storya Article Stream Settings</string>
    <string name="setting_sign">+</string>
    <string name="wifi_mobile"><b>MOBILE DATA OR WIFI</b>\n<font size='10'><i>Data charges may apply</i></font></string>
    <string name="wifi_only"><b>WIFI ONLY</b></string>
    <string name="do_not_download"><b>DO NOT DOWNLOAD</b></string>
    <string name="account_setting">Account Settings</string>
    <string name="change_password"><b>CHANGE PASSWORD</b></string>
    <string name="logout_login"><b>LOG OUT</b></string>
    <string name="logout">LOG OUT</string>
    <string name="time_hour">00</string>
    <string name="time_min">00</string>
    <string name="date">0-0-0000</string>
    <string name="im_listening">Im listening…</string>
    <string name="write_a_comment">Write a comment…</string>
    <string name="no_comment_found">No comment found.</string>
    <string name="comment_section">Comment Section</string>
    <string name="first_name">First Name</string>
    <string name="last_name">Last Name</string>
    <string name="re_type_password">Confirm Password</string>
    <string name="birthday">Birthday (Optional)(YYYY/MM/DD)</string>
    <string name="phone_number">Phone Number</string>
    <string name="address">Address</string>
    <string name="submit">SUBMIT</string>
    <string name="create_account">CREATE ACCOUNT</string>
    <string name="briefing_text"><font color='#FFFFFFFF'>\nSharing uplifting stories\nto influence the people,\nas they inspire us.\n\n</font><font color='#1580e3'><b>WRITE. INSPIRE. CHANGE</b></font>
    </string>
    <string name="dont_show_again">Don\'t show this again</string>
    <string name="data_usage_message">Using mobile data connection\nmay apply data charges.\nDo you want to proceed?</string>
    <string name="ok">CONFIRM</string>
    <string name="go_to_settings">GO TO SETTINGS</string>
    <string name="cancel">CANCEL</string>
    <string name="change_the_world_one_story_at_a_time">Change the World\nOne Story at a Time</string>
    <string name="mid_message">Thank you for reading this
        \ninspiring story.
        \n\nJoin us in changing the world by
        \sharing this with your friend.</string>
    <string name="footer_message">If you have story ideas or suggestions,\nplease message us \@mystorya.com.ph.</string>
    <string name="required_first_name"><font color='#FFFFFFFF'>First Name </font><font color="#e40b0b">*</font></string>
    <string name="required_last_name"><font color='#FFFFFFFF'>Last Name </font><font color="#e40b0b">*</font></string>
    <string name="required_birthday"><font color='#FFFFFFFF'>Birthday </font><font color="#e40b0b">*</font></string>
    <string name="required_email"><font color='#FFFFFFFF'>Email Address </font><font color="#e40b0b">*</font></string>
    <string name="required_phone_number"><font color='#FFFFFFFF'>Phone Number </font><font color="#e40b0b">*</font></string>
    <string name="required_address"><font color='#FFFFFFFF'>Address </font><font color="#e40b0b">*</font></string>
    <string name="old_password"><font color='#FFFFFFFF'>Current Password </font> <font color='#e40b0b'>*</font></string>
    <string name="new_password"><font color='#FFFFFFFF'>New Password </font> <font color='#e40b0b'>*</font></string>
    <string name="confirm_password"><font color='#FFFFFFFF'>Confirm Password </font> <font color='#e40b0b'>*</font></string>
    <string name="select_image">SELECT IMAGE</string>
    <string name="save">SAVE</string>
    <string name="take_photo">TAKE PHOTO</string>
    <string name="close">CLOSE</string>
    <string name="sign_in">Sign in</string>
    <string name="ring_ph">RING.PH</string>
    <string name="raffle_points">RAFFLE POINTS</string>
    <string name="wallet_details">Wallet Details</string>
    <string name="development_mode">Development Mode</string>
    <string name="edit_profile">EDIT PROFILE</string>
    <string name="my_wallet">MY WALLET</string>
    <string name="about_us">ABOUT US</string>


</resources>
