<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    tools:context=".activities.MenuAdsAppCompatActivity">
        <item android:id="@+id/edit_profile"
            android:title="@string/edit_profile"
            android:icon="@drawable/ic_user_profile"
            app:showAsAction="ifRoom|withText"/>
        <item android:id="@+id/wallet"
            android:title="@string/my_wallet"
            android:icon="@drawable/ic_wallet"
            app:showAsAction="ifRoom|withText"/>
        <item android:id="@+id/setting_drawer"
            android:title="@string/setting_all_caps"
            android:icon="@drawable/ic_settings"
            app:showAsAction="ifRoom|withText"/>
        <item android:id="@+id/about"
            android:title="@string/about_us"
            android:icon="@drawable/ic_about_us"
            app:showAsAction="ifRoom|withText"/>
        <item android:id="@+id/logout_side"
            android:title="@string/logout"
            android:icon="@drawable/ic_sign_out"
            app:showAsAction="ifRoom|withText"/>
</menu>