<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".settings.ActivitySettings"
    android:background="@drawable/new_splash_screen_02192019">
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        android:weightSum="1">

        <ImageView
            android:layout_marginTop="25sp"
            android:adjustViewBounds="true"
            android:paddingTop="5sp"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:src="@drawable/sign_up_top_logo" />

        <TextView
            android:id="@+id/setting_text"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/setting"
            android:paddingStart="10sp"
            android:gravity="center"
            android:textSize="15sp"
            android:textColor="#90fdfd65"
            android:visibility="gone"/>
        <ScrollView
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:fillViewport="true"
            android:overScrollMode="never"
            android:padding="0dp">

            <RelativeLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content">
                <LinearLayout
                    android:id="@+id/linear_general_setting"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="vertical"
                    android:visibility="gone">
                    <Switch
                        android:id="@+id/switch_hide_show"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginStart="35dp"
                        android:layout_marginEnd="19dp"
                        android:paddingTop="15sp"
                        android:text="@string/show_hide_data_usage"
                        android:textColor="#000"
                        android:paddingBottom="15sp"/>
                </LinearLayout>

                <TextView
                    android:id="@+id/download_setting"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_below="@+id/linear_general_setting"
                    android:layout_alignParentStart="true"
                    android:layout_marginStart="0dp"
                    android:layout_marginTop="0dp"
                    android:layout_toStartOf="@+id/download_setting_sign"
                    android:onClick="downloadSettingClick"
                    android:paddingStart="30sp"
                    android:paddingTop="10sp"
                    android:paddingBottom="15sp"
                    android:text="@string/story_download_setting"
                    android:textColor="#FFF"
                    android:textSize="15sp" />


                <TextView
                    android:id="@+id/download_setting_sign"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_below="@+id/linear_general_setting"
                    android:layout_alignParentEnd="true"
                    android:gravity="end"
                    android:paddingStart="10sp"
                    android:paddingTop="10sp"
                    android:paddingEnd="15sp"
                    android:paddingBottom="15sp"
                    android:text="@string/setting_sign"
                    android:textColor="#FFF"
                    android:textSize="15sp"
                    android:onClick="downloadSettingClick" />

                <LinearLayout
                    android:id="@+id/linear_download"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_below="@+id/download_setting"
                    android:orientation="vertical"
                    android:visibility="gone">

                    <Switch
                        android:id="@+id/mobile_and_wifi"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginStart="45dp"
                        android:layout_marginTop="4dp"
                        android:layout_marginEnd="19dp"
                        android:paddingTop="20sp"
                        android:paddingBottom="15sp"
                        android:text="@string/wifi_mobile"
                        android:textColor="#FFF" />

                    <Switch
                        android:id="@+id/wifi_only"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginStart="45dp"
                        android:layout_marginEnd="19dp"
                        android:paddingTop="20sp"
                        android:paddingBottom="15sp"
                        android:text="@string/wifi_only"
                        android:textColor="#FFF"
                        android:visibility="gone"/>

                    <Switch
                        android:id="@+id/do_not_download"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginStart="45dp"
                        android:layout_marginEnd="19dp"
                        android:paddingTop="20sp"
                        android:paddingBottom="15sp"
                        android:text="@string/do_not_download"
                        android:textColor="#FFF"
                        android:visibility="gone" />
                </LinearLayout>

                <TextView
                    android:id="@+id/account_setting"
                    android:layout_width="351dp"
                    android:layout_height="wrap_content"
                    android:layout_below="@+id/linear_download"
                    android:layout_alignParentStart="true"
                    android:layout_marginStart="0dp"
                    android:layout_marginEnd="0dp"
                    android:layout_toStartOf="@+id/account_setting_sign"
                    android:onClick="accountSettingClick"
                    android:paddingStart="30sp"
                    android:paddingTop="10sp"
                    android:paddingBottom="15sp"
                    android:text="@string/account_setting"
                    android:textColor="#FFF"
                    android:textSize="15sp" />

                <TextView
                    android:id="@+id/account_setting_sign"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_below="@+id/linear_download"
                    android:layout_alignParentEnd="true"
                    android:layout_marginEnd="0dp"
                    android:gravity="end"
                    android:paddingStart="10sp"
                    android:paddingTop="10sp"
                    android:paddingEnd="15sp"
                    android:paddingBottom="15sp"
                    android:text="@string/setting_sign"
                    android:textColor="#FFF"
                    android:textSize="15sp"
                    android:onClick="accountSettingClick" />

                <LinearLayout
                    android:id="@+id/linear_account_setting"
                    android:layout_below="@id/account_setting"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="vertical"
                    android:visibility="gone">
                    <TextView
                        android:id="@+id/change_password"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginStart="45dp"
                        android:layout_marginEnd="19dp"
                        android:text="@string/change_password"
                        android:textColor="#FFF"
                        android:paddingTop="15sp"
                        android:paddingBottom="15sp"
                        android:textSize="15sp"/>
                    <!--<TextView-->
                        <!--android:id="@+id/logout"-->
                        <!--android:layout_width="wrap_content"-->
                        <!--android:layout_height="wrap_content"-->
                        <!--android:layout_marginStart="45dp"-->
                        <!--android:layout_marginEnd="19dp"-->
                        <!--android:text="@string/logout_login"-->
                        <!--android:textColor="#FFF"-->
                        <!--android:paddingTop="15sp"-->
                        <!--android:paddingBottom="15sp"-->
                        <!--android:textSize="15sp"-->
                        <!--android:onClick="logout"/>-->

                </LinearLayout>
            </RelativeLayout>
        </ScrollView>
    </LinearLayout>
</RelativeLayout>