<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent"
    android:background="@android:color/transparent" >

    <LinearLayout
        android:id="@+id/linearLayout1"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentStart="true"
        android:layout_alignParentTop="true"
        android:layout_marginTop="57dp"
        android:background="@drawable/new_background_color_gradient"
        android:orientation="vertical">

        <LinearLayout
            android:paddingTop="25sp"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:gravity="top|center"
            android:orientation="vertical">
            <TextView
                android:id="@+id/message_notif"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="25dp"
                android:layout_marginBottom="5dp"
                android:background="#ffbc00"
                android:drawableStart="@drawable/ic_icon"
                android:gravity="center"
                android:padding="10sp"
                android:layout_marginStart="10sp"
                android:layout_marginEnd="10sp"
                android:textColor="#000"
                android:visibility="gone"/>
            <EditText
                android:id="@+id/old_password"
                android:background="#60ffffff"
                android:hint="@string/old_password"
                android:layout_width="match_parent"
                android:layout_height="37sp"
                android:layout_marginTop="20sp"
                android:layout_marginStart="10sp"
                android:layout_marginEnd="10sp"
                android:gravity="center"
                android:textColor="#ff6600"
                android:textSize="20sp"
                android:inputType="textPassword" />
            <EditText
                android:id="@+id/new_password"
                android:background="#60ffffff"
                android:hint="@string/new_password"
                android:layout_width="match_parent"
                android:layout_height="37sp"
                android:layout_marginTop="20sp"
                android:layout_marginStart="10sp"
                android:layout_marginEnd="10sp"
                android:gravity="center"
                android:textColor="#ff6600"
                android:textSize="20sp"
                android:inputType="textPassword" />
            <EditText
                android:id="@+id/re_password"
                android:background="#60ffffff"
                android:textColorHint="#fff"
                android:hint="@string/confirm_password"
                android:layout_width="match_parent"
                android:layout_height="37sp"
                android:layout_marginTop="20sp"
                android:layout_marginStart="10sp"
                android:layout_marginEnd="10sp"
                android:gravity="center"
                android:textColor="#ff6600"
                android:textSize="20sp"
                android:inputType="textPassword" />

        </LinearLayout>

        <LinearLayout
            android:id="@+id/linear_buttons"
            android:orientation="horizontal"
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight="1"
            android:gravity="center"
            android:layout_marginTop="15sp"
            android:layout_marginBottom="15sp"
            android:layout_marginStart="15sp"
            android:layout_marginEnd="15sp"
            >
            <Button
                android:id="@+id/cancel_change_password"
                android:text="@string/cancel"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:layout_marginEnd="5sp"
                android:gravity="center"
                android:textColor="#FFF"
                android:background="@drawable/rounded_button_orange"/>
            <Button
                android:id="@+id/change_password_submit"
                android:text="@string/submit"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:gravity="center"
                android:background="@drawable/rounded_button_white"
                android:textColor="#f45a31"/>

        </LinearLayout>
    </LinearLayout>

    <ImageView
        android:id="@+id/imageView1"
        android:layout_width="100dp"
        android:layout_height="100dp"
        android:layout_alignParentTop="true"
        android:layout_centerHorizontal="true"
        android:src="@drawable/m1w_logo_icon" />

</RelativeLayout>