<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:gravity="center"
    tools:context=".registration.ActivityRegister"
    android:background="@drawable/new_background_color_gradient"
    android:orientation="vertical">


    <ImageView
        android:id="@+id/signup_header"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:adjustViewBounds="true"
        android:layout_below="@+id/linear_notif"
        android:minHeight="120sp"
        android:maxHeight="120sp"
        android:padding="10sp"
        android:src="@drawable/sign_up_top_logo" />
    <TextView
        android:layout_below="@+id/signup_header"
        android:id="@+id/text_registration"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/edit_profile"
        android:gravity="center"
        android:textSize="15sp"
        android:textColor="#fff"/>
    <TextView
        android:id="@+id/message_notif"
        android:layout_below="@id/signup_header"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="25dp"
        android:layout_marginBottom="5dp"
        android:background="#ffbc00"
        android:drawableStart="@drawable/ic_icon"
        android:gravity="center"
        android:padding="10sp"
        android:layout_marginStart="10sp"
        android:layout_marginEnd="10sp"
        android:textColor="#000"
        android:visibility="gone"/>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        android:weightSum="1"
        android:layout_below="@+id/message_notif">

        <ScrollView
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:fillViewport="true"
            android:overScrollMode="never">

            <RelativeLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content">

                <EditText
                    android:id="@+id/first_name_edit"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_alignParentStart="true"
                    android:layout_alignParentTop="true"
                    android:layout_alignParentEnd="true"
                    android:layout_marginStart="32dp"
                    android:layout_marginTop="25dp"
                    android:layout_marginEnd="32dp"
                    android:ems="10"
                    android:padding="5sp"
                    android:hint="@string/required_first_name"
                    android:inputType="textPersonName"
                    android:textColor="#3a5daa"
                    android:background="#60ffffff"
                    android:gravity="start"
                    android:textSize="15sp"
                    />

                <EditText
                    android:id="@+id/last_name_edit"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_below="@+id/first_name_edit"
                    android:layout_alignParentStart="true"
                    android:layout_alignParentEnd="true"
                    android:layout_marginStart="32dp"
                    android:layout_marginTop="25dp"
                    android:layout_marginEnd="32dp"
                    android:ems="10"
                    android:hint="@string/required_last_name"
                    android:padding="5sp"
                    android:inputType="textPersonName"
                    android:textColor="#3a5daa"
                    android:background="#60ffffff"
                    android:gravity="left"
                    android:textSize="15sp"/>

                <EditText
                    android:id="@+id/birth_date_edit"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_below="@+id/last_name_edit"
                    android:layout_alignParentStart="true"
                    android:layout_alignParentEnd="true"
                    android:layout_marginStart="32dp"
                    android:layout_marginTop="25dp"
                    android:layout_marginEnd="32dp"
                    android:background="#60ffffff"
                    android:ems="10"
                    android:focusable="false"
                    android:focusableInTouchMode="false"
                    android:gravity="start"
                    android:hint="@string/required_birthday"
                    android:padding="5sp"
                    android:textColor="#3a5daa"
                    android:textColorHint="#FFFFFF"
                    android:textSize="15sp" />


                <EditText
                    android:id="@+id/email_edit"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_below="@+id/birth_date_edit"
                    android:layout_alignParentStart="true"
                    android:layout_alignParentEnd="true"
                    android:layout_marginStart="32dp"
                    android:layout_marginTop="25dp"
                    android:layout_marginEnd="32dp"
                    android:ems="10"
                    android:hint="@string/required_email"
                    android:inputType="textEmailAddress"
                    android:padding="5sp"
                    android:textColor="#3a5daa"
                    android:background="#60ffffff"
                    android:textColorHint="#FFFFFF"
                    android:gravity="left"
                    android:textSize="15sp" />

                <Spinner
                    android:id="@+id/country_edit"
                    style="@style/mySpinnerItemStyle"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_below="@+id/email_edit"
                    android:layout_alignParentStart="true"
                    android:layout_alignParentEnd="true"
                    android:layout_marginStart="32dp"
                    android:layout_marginTop="25dp"
                    android:layout_marginEnd="32dp"
                    android:textColor="#3a5daa"
                    android:ems="10"/>

                <EditText
                    android:id="@+id/phone_number_edit"
                    android:layout_width="312dp"
                    android:layout_height="wrap_content"
                    android:layout_below="@+id/country_edit"
                    android:layout_alignParentStart="true"
                    android:layout_alignParentEnd="true"
                    android:layout_marginStart="32dp"
                    android:layout_marginTop="25dp"
                    android:layout_marginEnd="32dp"
                    android:ems="10"
                    android:gravity="start"
                    android:hint="@string/required_phone_number"
                    android:inputType="phone"
                    android:padding="5sp"
                    android:textColor="#3a5daa"
                    android:background="#60ffffff"
                    android:textColorHint="#FFFFFF"
                    android:textSize="15sp"/>

                <EditText
                    android:id="@+id/address_edit"
                    android:layout_width="wrap_content"
                    android:layout_height="100dp"
                    android:layout_below="@+id/phone_number_edit"
                    android:layout_alignParentStart="true"
                    android:layout_alignParentEnd="true"
                    android:layout_marginStart="32dp"
                    android:layout_marginTop="25dp"
                    android:layout_marginEnd="32dp"
                    android:backgroundTint="#FFF"
                    android:ems="10"
                    android:gravity="top|center"
                    android:hint="@string/required_address"
                    android:inputType="textMultiLine"
                    android:padding="5sp"
                    android:textColor="#3a5daa"
                    android:background="#60ffffff"
                    android:textColorHint="#FFFFFF" />


                <Button
                    android:id="@+id/edit_submit"
                    android:layout_width="215dp"
                    android:layout_height="44dp"
                    android:layout_below="@+id/address_edit"
                    android:layout_centerHorizontal="true"
                    android:layout_marginTop="25dp"
                    android:layout_marginBottom="181dp"
                    android:background="@drawable/rounded_button_new_blue"
                    android:text="@string/submit"
                    android:textColor="#FFFFFFFF" />
            </RelativeLayout>
        </ScrollView>
    </LinearLayout>
</RelativeLayout >